// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric Custom Transform Generator aggregates using doc_count for the denominator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_total_A>_count",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A / 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using doc_count the numerator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_good_A>_count",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A * 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the denominator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_total_A>metric",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A / 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the denominator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_total_A>metric",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A / 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the numerator equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_good_A>metric",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A * 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator aggregates using the numerator equation with filter 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_good_A>metric",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A * 100",
    },
  },
}
`;

exports[`Metric Custom Transform Generator filters the source using the kql query 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "log_timestamp": Object {
            "gte": "now-7d/d",
          },
        },
      },
      Object {
        "bool": Object {
          "minimum_should_match": 1,
          "should": Array [
            Object {
              "match": Object {
                "labels.groupId": "group-4",
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`Metric Custom Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 3.3,
  },
  "defer_validation": true,
  "description": "Rolled-up SLI data for SLO: irrelevant [id: irrelevant, revision: 1]",
  "dest": Object {
    "index": ".slo-observability.sli-v3.3",
    "pipeline": ".slo-observability.sli.pipeline-irrelevant-1",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good_A": Object {
        "aggs": Object {
          "metric": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_good_B": Object {
        "aggs": Object {
          "metric": Object {
            "sum": Object {
              "field": "processed",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total_A": Object {
        "aggs": Object {
          "metric": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_total_A>metric",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A",
          },
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>value",
            "totalEvents": "slo.denominator>value",
          },
          "script": "if (params.totalEvents == 0) { return 1 } else { return params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0 }",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_good_A>metric",
            "B": "_good_B>metric",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A - params.B",
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "2m",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": Array [
      "my-index*",
      "my-other-index*",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "log_timestamp": Object {
                "gte": "now-7d/d",
              },
            },
          },
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "labels.groupId": "group-3",
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {},
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": "slo-irrelevant-1",
}
`;

exports[`Metric Custom Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 3.3,
  },
  "defer_validation": true,
  "description": "Rolled-up SLI data for SLO: irrelevant [id: irrelevant, revision: 1]",
  "dest": Object {
    "index": ".slo-observability.sli-v3.3",
    "pipeline": ".slo-observability.sli.pipeline-irrelevant-1",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_good_A": Object {
        "aggs": Object {
          "metric": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_good_B": Object {
        "aggs": Object {
          "metric": Object {
            "sum": Object {
              "field": "processed",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "_total_A": Object {
        "aggs": Object {
          "metric": Object {
            "sum": Object {
              "field": "total",
            },
          },
        },
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.denominator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_total_A>metric",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A",
          },
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_good_A>metric",
            "B": "_good_B>metric",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A - params.B",
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "1m",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": Array [
      "my-index*",
      "my-other-index*",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "log_timestamp": Object {
                "gte": "now-7d/d",
              },
            },
          },
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "labels.groupId": "group-3",
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {},
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": "slo-irrelevant-1",
}
`;

exports[`Metric Custom Transform Generator support the same field used twice in the equation 1`] = `
Object {
  "bucket_script": Object {
    "buckets_path": Object {
      "A": "_good_A>metric",
    },
    "script": Object {
      "lang": "painless",
      "source": "params.A + params.A * 100",
    },
  },
}
`;
